Reduce complexity of resolveLocation