@@ -53,41 +53,52 @@ public final class ResourceResolver {
 	 * @return the {@code URL} of the resolved location or {@code null}.
 	 */
 	public URL resolveLocation(final String location) {
-		URL url = null;
 		// 1. Try it as a resource first.
-		// not that class loaders don't want leading slashes.
-		String urlLocation = location;
-		if (urlLocation.startsWith("/")) {
-			urlLocation = urlLocation.substring(1);
-		}
 		if (pluginRealm != null) {
-			url = pluginRealm.getResource(urlLocation);
+			String urlLocation = location;
+			// note that class loaders don't want leading slashes.
+			if (urlLocation.startsWith("/")) {
+				urlLocation = urlLocation.substring(1);
+			}
+			URL url = pluginRealm.getResource(urlLocation);
+			if (url != null) {
+				return url;
+			}
 		}
-		if (url == null) {
+
+		// 2. Try it as a remote resource.
+		try {
+			URL url = new URL(location);
+			// check if valid.
+			url.openStream();
+			return url;
+		} catch (MalformedURLException ex) {
+			// ignored, try next
+		} catch (Exception ex) {
+			// ignored, try next
+		}
+
+		// 3. Try to see if it exists as a filesystem resource.
+		File file = new File(location);
+		if (file.exists()) {
 			try {
-				// 2. Try it as a remote resource.
-				url = new URL(location);
-				// check if valid.
-				url.openStream();
+				return file.toURI().toURL();
 			} catch (MalformedURLException ex) {
 				// ignored, try next
-			} catch (Exception ex) {
-				// ignored, try next
-			}
-			if (url == null) {
-				// 3. Try to see if it exists as a filesystem resource.
-				final File f = new File(location);
-				if (f.exists()) {
-					try {
-						url = f.toURI().toURL();
-					} catch (MalformedURLException ex) {
-						// ignored, try next
-					}
-				}
 			}
 		}
-		return url;
 
+		File projectFile = projectLocation.append(location).toFile();
+		if (projectFile.exists()) {
+			try {
+				return projectFile.toURI().toURL();
+			} catch (MalformedURLException ex) {
+				// ignored, try next
+			}
+		}
+
+		// 4. null
+		return null;
 	}
 
 }
